Fix navbar to stay visible on scroll

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html{
 body {
     width: 100%;
     overflow-x: hidden;
+    margin-top: 60px;
 }
 
 /* Scroll Animation Classes */
@@ -54,15 +55,19 @@ a{
     justify-content: center;
     align-items: center;
     background-color: black;
-    position: sticky;
+    position: fixed;
     top: 0;
-    opacity: .8;
-    z-index: 1000;
+    left: 0;
+    right: 0;
+    opacity: .9;
+    z-index: 9999;
+    width: 100%;
+    box-sizing: border-box;
 }
 .navbar ul{
 display: flex;
 list-style: none;
-margin: 20px 0px;
+margin: 15px 0px;
 flex-wrap: wrap;
 }
 .navbar ul li{
